<resources>
    <string name="app_name">Project3</string>
    <string name="correct"><b>CORRECTNESS IS</b> \n
                           <b>%1$d</b> OUT OF 6</string>
    <string name="true_text">true</string>
    <string name="false_text">false</string>
    <string name="correct_answer">That\'s correct</string>
    <string name="wrong_answer">That\'s incorrect</string>
    <string name="a">"Java programming is not statically-typed, means all variables should not first be declared before they can be used."</string>
    <string name="b">"All binary operators except for the assignment operators are evaluated from Left to Right"</string>
    <string name="c">"Assignment operator is evaluated Left to Right."</string>
    <string name="d">"Constructor overloading is not possible in Java."</string>
    <string name="e">"The JRE deletes objects when it determines that they are no longer being used. This process is called Garbage Collection."</string>
    <string name="f">"Garbage Collection is manual process."</string>
    <string name="next_text">next</string>
    <string name="prev_text">previous</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="google_maps_key">AIzaSyAFFBhGAOEdemO3QhdUyQize08795CZeVE</string>
    <string name="title_activity_quiz_type">QuizTypeActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="fbSubmit">Submit</string>
    <string name="hintAnswer">Answer</string>
    <string name="toggle_theme">Toggle Theme</string>
    <string name="settings">Settings</string>
    <string name="title_activity_settings">SettingsActivity</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="theme_category">Theme Settings</string>
    <string name="pref_auto_theme">Automatically set theme</string>
    <string name="pref_theme_auto_desc">When checked, app theme will follow device theme settings</string>
    <string name="pref_manual_theme">Use Dark Mode</string>
    <string name="pref_theme_title">App Theme</string>
    <string name="key_theme">APPTHEME</string>
    <string name="other">Other Settings</string>
    <string name="pref_db_clea">Clear Database</string>

    <!-- Dialog strings -->
    <string name="dialog_message">Are you sure you want to clear the database? This will permanently erase all quiz attempts</string>
    <string name="dialog_yes">Yes</string>
    <string name="dialog_no">Cancel</string>

    <string name="dialog_cancel_quiz">Are you sure you want to leave the quiz? No attempt will be saved</string>
</resources>